* 오늘 수업내용 추가.